<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- <parent>
		<groupId>pks.example.modernize</groupId>
		<artifactId>master-parent</artifactId>
		<version>0.0.0-SNAPSHOT</version>
	</parent> -->

	<name>Example: Aspect, Mapstruct, &amp; Lombok</name>
	<groupId>pks.example.aspect</groupId>
	<artifactId>tech-demo</artifactId>
	<version>0.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<description><![CDATA[
	]]></description>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<org-projectlombok.version>1.18.36</org-projectlombok.version>
		<org-mapstruct.version>1.6.3</org-mapstruct.version>
		<org-aspectj.version>1.9.21.2</org-aspectj.version>

		<maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
		<!-- <maven-javadoc-plugin.version>3.11.1</maven-javadoc-plugin.version> -->
		<lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
		<dev-aspectj-maven-plugin.version>1.14</dev-aspectj-maven-plugin.version>

		<versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>

		<org-javamoney.version>1.4.4</org-javamoney.version>

		<org-junit-jupiter.version>5.11.3</org-junit-jupiter.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${org-projectlombok.version}</version>
				<scope>provided</scope>
			</dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${org-mapstruct.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org-mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjrt</artifactId>
                <version>${org-aspectj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjweaver</artifactId>
                <version>${org-aspectj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>${aspectj-maven-plugin.version}</version>
            </dependency>

			<dependency>
				<groupId>org.javamoney</groupId>
				<artifactId>moneta</artifactId>
				<version>${org-javamoney.version}</version>
				<type>pom</type>
			</dependency>

			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${org-junit-jupiter.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
		</dependency>
		<dependency>
			<groupId>org.javamoney</groupId>
			<artifactId>moneta</artifactId>
			<type>pom</type>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
                
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</path>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok-mapstruct-binding</artifactId>
								<version>${lombok-mapstruct-binding.version}</version>
							</path>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
							</path>
						</annotationProcessorPaths>
						<outputDirectory>${project.build.directory}/unwoven-classes</outputDirectory>
						<compilerArgs>

                    <!-- <arg>-parameters</arg> -->
					<!-- <arg>-Amapstruct.verbose=true</arg> -->
                    <!-- <arg>-Amapstruct.defaultComponentModel="spring"</arg> -->
                    <!-- <arg>-Amapstruct.unmappedTargetPolicy=ERROR</arg> -->

						</compilerArgs>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.projectlombok</groupId>
					<artifactId>lombok-maven-plugin</artifactId>
					<version>${lombok-maven-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${org-projectlombok.version}</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<phase>generate-sources</phase>
							<goals>
								<goal>delombok</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<addOutputDirectory>false</addOutputDirectory>
						<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
						<outputDirectory>${project.build.directory}/generated-sources/delombok</outputDirectory>
						<verbose>false</verbose>
					</configuration>
				</plugin>

        <plugin>
					<groupId>dev.aspectj</groupId>
					<artifactId>aspectj-maven-plugin</artifactId>
					<version>${dev-aspectj-maven-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.aspectj</groupId>
							<artifactId>aspecttools</artifactId>
							<version>${org-aspectj.version}</version>
						</dependency>
					</dependencies>

            <executions>
                <execution>
								<id>aspect-weave</id>
                    <phase>process-classes</phase>
                    <goals>
                        <goal>compile</goal>
                    </goals>
					                </execution>
									<execution>
										<id>aspect-test-weave</id>
														<phase>process-test-classes</phase>
                    <goals>
                        <goal>compile</goal>
                    </goalseInfo>true</showWeaveInfo>
									<encoding>${project.sourceEncoding}</encoding>
									<weaveDirectories>{project.build.directory}/unwoven-classes</weaveDirectories>
                        <!-- <weaveDirectories> -->
                            <!-- <weaveDirectory>${project.build.directory}/unwoven-classes</weaveDirectory> -->
                            <!-- <directory>${project.build.directory}/unwoven-classes</directory> -->
                        <!-- </weaveDirectories> -->
                    </configuration>
        </plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.junit.jupiter</groupId>
							<artifactId>junit-jupiter-engine</artifactId>
							<version>${org-junit-jupiter.version}</version>
						</dependency>
					</dependencies>
					<configuration>
						<argLine>-XX:+EnableDynamicAgentLoading</argLine>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>${versions-maven-plugin.version}</version>
					<configuration>
						<allowMajorUpdates>false</allowMajorUpdates>
							<ruleSet>
								<ignoreVersions>
									<ignoreVersion><type>regex</type><version>.+[-.](SNAPSHOT|M\d).*?</version></ignoreVersion>
									<ignoreVersion><type>regex</type><version>.+[-.]([aA]lpha|[bB]eta).*?</version></ignoreVersion>
									<ignoreVersion><type>regex</type><version>.+[-.]([rR][cC]|[mM]).*?</version></ignoreVersion>
								</ignoreVersions>
						</ruleSet>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-maven-plugin</artifactId>
			</plugin>	

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
			</plugin>	
		</plugins>
	</build>

</project>